Proyecto frontend store finalizado

--- a/producto.html
+++ b/producto.html
@@ -25,6 +25,32 @@
 
     <main class="contenedor">
         <h1>React JS</h1>
+        <div class="camisa">
+            <img src="img/3.jpg" alt="Imagen del producto" class="camisa__imagen">
+            <div class="camisa__contenido">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero qui saepe atque tempore! Magnam quasi placeat quae eaque veniam ea quisquam, rerum dolorum expedita nobis enim ipsa itaque necessitatibus quam! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero qui saepe atque tempore! Magnam quasi placeat quae eaque veniam ea quisquam, rerum dolorum expedita nobis enim ipsa itaque necessitatibus quam!</p>
+
+                <form action="" class="formulario">
+                    <select class="formulario__campo">
+                        <option disabled selected>
+                            --Seleccionar talla--
+                        </option>
+                        <option value="">
+                            Chica
+                        </option>
+                        <option value="">
+                            Mediana
+                        </option>
+                        <option value="">
+                            Grande
+                        </option>
+                    </select>
+                    <input class="formulario__campo" type="number" placeholder="Cantidad" min="1">
+                    <input class="formulario__submit" type="submit" value="Agregar al carrito">
+                </form>
+            </div>
+            
+        </div>
     </main>
 
     <footer class="footer">
